--- a/Quickstart_DBMS.ipynb
+++ b/Quickstart_DBMS.ipynb
@@ -7,16 +7,16 @@
     "hidePrompt": false
    },
    "source": [
-    "# Get Started with SparseTensorClassifier\n",
+    "# Run SparseTensorClassifier on DBMS\n",
     "\n",
-    " Get Started with `SparseTensorClassifier` by classifying animals based upon their attributes. \n",
+    "In this tutorial you'll learn how to connect STC with DBMS so that computations are run directly on databases via SQL queries. Take full advantage of persistent storage and scalability.\n",
     "\n",
     "\n",
     "## Colab\n",
     "\n",
-    "This tutorial and the rest in [this sequence](https://github.com/SparseTensorClassifier/tutorial) can be done in Google colab. If you'd like to open this notebook in colab, you can use the following link or click [here](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Get_Started.ipynb).\n",
+    "This tutorial and the rest in [this sequence](https://github.com/SparseTensorClassifier/tutorial) can be done in Google colab. If you'd like to open this notebook in colab, you can use the following link or click [here](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Quickstart_DBMS.ipynb).\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Get_Started.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Quickstart_DBMS.ipynb)\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -394,8 +394,40 @@
    "metadata": {},
    "source": [
     "## Initialize SparseTensorClassifier\n",
+    "By default `SparseTensorClassifier` is initialized with an in-memory SQLite connection. This can be modified by passing an `engine` string or connection upon initialization. Supported DBMS include:\n",
     "\n",
-    "Let's instruct STC to predict `class_type` based on all the other attributes in the dataset, except `animal_name`."
+    "### SQLite v3.24+\n",
+    "\n",
+    "* use `sqlite:///path/to/file.db` \n",
+    "* see also [SQLite engine](https://docs.sqlalchemy.org/en/14/dialects/sqlite.html)\n",
+    "\n",
+    "### PostgreSQL 9.6+;\n",
+    "\n",
+    "* use `postgresql://user:pwd@host:port/dbname` \n",
+    "* or `postgresql+pg8000://user:pwd@host:port/dbname`\n",
+    "* see also [PostgreSQL engine](https://docs.sqlalchemy.org/en/14/dialects/postgresql.html)\n",
+    "\n",
+    "### MySQL v8.0+\n",
+    "\n",
+    "* use `mysql://user:pwd@host:port/dbname`\n",
+    "* see also [MySQL engine](https://docs.sqlalchemy.org/en/14/dialects/mysql.html)\n",
+    "\n",
+    "### SQL Server 2017+\n",
+    "\n",
+    "* use `mssql+pyodbc://user:pwd@host:port/dbname?driver=SQL+Server`\n",
+    "* see also [SQL Server engine](https://docs.sqlalchemy.org/en/14/dialects/mssql.html)\n",
+    "\n",
+    "### Oracle 12.2+\n",
+    "\n",
+    "* use `oracle+cx_oracle://user:pwd@host:port/dbname`\n",
+    "* seel also [Oracle engine](https://docs.sqlalchemy.org/en/14/dialects/oracle.html) and [cx_Oracle Installation](https://cx-oracle.readthedocs.io/en/latest/user_guide/installation.html)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's instruct STC to predict `class_type` based on all the other attributes in the dataset, except `animal_name`,  by using a SQLite database file as backend. All the data are saved to the DB and all the computations are run as SQL queries. It is also possible to use the same database for several case studies by specifying the argument `prefix`. Objects initialized with different `prefix` are completely independent as if they were accessing different databases."
    ]
   },
   {
@@ -404,17 +436,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "STC = SparseTensorClassifier(targets=['class_type'], features=zoo.columns[1:-1])"
+    "STC = SparseTensorClassifier(engine='sqlite:///zoo.db', prefix=\"v1\", targets=['class_type'], features=zoo.columns[1:-1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fit the training data\n",
-    "\n",
-    "Train STC on the first 70 animals in the dataset. \n",
-    "- **Note:** STC deals with **categorical** variables only. Continuous features should be discretized first. "
+    "## Fit the training data"
    ]
   },
   {
@@ -426,7 +455,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[============================================================] 100.0% Fitting (00:00:00.04/00:00:00.04)\r"
+      "[============================================================] 100.0% Fitting (00:00:00.16/00:00:00.16)\r"
      ]
     }
    ],
@@ -438,15 +467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predict the test data\n",
-    "\n",
-    "Predict the other animals. STC returns a tuple of (labels, probability, explainability):\n",
-    "- **labels:** The predicted classes. \n",
-    "- **probability:** Probability for each class.\n",
-    "- **explainability:** Contribute of each feature to the predictions.\n",
-    "\n",
-    "To save computational time, let's set `probability=False` and `explain=False`, so that only the class labels are computed.\n",
-    "- **Note:** In the prediction phase, STC considers only the `features` provided in initialization. Additional variables (including `targets`) are ignored."
+    "## Predict the test data"
    ]
   },
   {
@@ -458,7 +479,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[============================================================] 100.0% Predicting (00:00:00.03/00:00:00.03)\r"
+      "[============================================================] 100.0% Predicting (00:00:00.15/00:00:00.15)\r"
      ]
     }
    ],
@@ -494,6 +515,116 @@
    ],
    "source": [
     "accuracy_score(zoo['class_type'][70:], labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Persistent storage\n",
+    "\n",
+    "The model and data live in the persistent storage identified by the engine and prefix. \n",
+    "This means they can be recovered any time. Let's show it by closing the connection, deleting the python object, and re-initializing STC from the connection."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Close the connection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STC.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Destroy the object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del STC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Restore SparseTensorClassifier from the connection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STC = SparseTensorClassifier(engine='sqlite:///zoo.db', prefix=\"v1\", targets=['class_type'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can directly predict the test data, as the model has been restored and was already fitted. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[============================================================] 100.0% Predicting (00:00:00.11/00:00:00.11)\r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.967741935483871"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels, _, _ = STC.predict(zoo[70:], probability=False, explain=False)\n",
+    "accuracy_score(zoo['class_type'][70:], labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean the DB\n",
+    "Drop tables, close the connection, and destroy the engine. The model and data are lost."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STC.clean(deep=True)"
    ]
   },
   {
