--- a/Quickstart_DBMS.ipynb
+++ b/Quickstart_DBMS.ipynb
@@ -7,7 +7,7 @@
     "hidePrompt": false
    },
    "source": [
-    "# Run SparseTensorClassifier on DBMS\n",
+    "# Run Sparse Tensor Classifier on DBMS\n",
     "\n",
     "In this tutorial you'll learn how to connect STC with DBMS so that computations are run directly on databases via SQL queries. Take full advantage of persistent storage and scalability.\n",
     "\n",
@@ -393,7 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize SparseTensorClassifier\n",
+    "## Initialize Sparse Tensor Classifier\n",
     "By default `SparseTensorClassifier` is initialized with an in-memory SQLite connection. This can be modified by passing an `engine` string or connection upon initialization. Supported DBMS include:\n",
     "\n",
     "### SQLite v3.24+\n",
@@ -563,7 +563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Restore SparseTensorClassifier from the connection"
+    "Restore `SparseTensorClassifier` from the connection"
    ]
   },
   {
@@ -633,7 +633,7 @@
    "source": [
     "# Congratulations! \n",
     "\n",
-    "Congratulations on completing this tutorial notebook! If you enjoyed working through the tutorial, and want to continue working with SparseTensorClassifier, we encourage you to finish the rest of the tutorials in [this series](https://github.com/SparseTensorClassifier/tutorial). Don't forget to star the [repository](https://github.com/SparseTensorClassifier/stc)! \n",
+    "Congratulations on completing this tutorial notebook! If you enjoyed working through the tutorial, and want to continue working with Sparse Tensor Classifier, we encourage you to finish the rest of the tutorials in [this series](https://github.com/SparseTensorClassifier/tutorial). Don't forget to star the [repository](https://github.com/SparseTensorClassifier/stc)! \n",
     "\n",
     "[![GitHub Repo stars](https://img.shields.io/github/stars/SparseTensorClassifier/stc?style=social)](https://github.com/SparseTensorClassifier/stc)\n",
     "\n",
@@ -658,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
