--- a/Quickstart_Input_Data.ipynb
+++ b/Quickstart_Input_Data.ipynb
@@ -7,16 +7,16 @@
     "hidePrompt": false
    },
    "source": [
-    "# Explain Sparse Tensor Classifier (multiple dimensions)\n",
+    "# The Sparse Tensor Classifier Input Data Format\n",
     "\n",
-    "In this tutorial you'll learn how to explain the predictions by Sparse Tensor Classifier in the case when multiple dimensions are used for the features. The algorithm provides native support for both global and local explainability, thus offering a tool for explorative data analysis and interpreting the individual predictions. \n",
+    "In this tutorial you'll learn how to pass the input data to `SparseTensorClassifier` both in tabular and JSON format.\n",
     "\n",
     "\n",
-    "## Colab\n",
+    "## Colab \n",
     "\n",
-    "This tutorial and the rest in [this sequence](https://github.com/SparseTensorClassifier/tutorial) can be done in Google colab. If you'd like to open this notebook in colab, you can use the following link or click [here](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Explain_Multi_Dimension_Zoo.ipynb).\n",
+    "This tutorial and the rest in [this sequence](https://github.com/SparseTensorClassifier/tutorial) can be done in Google colab. If you'd like to open this notebook in colab, click [here](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Quickstart_Input_Data.ipynb).\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Explain_Multi_Dimension_Zoo.ipynb)\n",
+    "![](https://colab.research.google.com/assets/colab-badge.svg)\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install stc pandas"
+    "# !pip install stc pandas scikit-learn"
    ]
   },
   {
@@ -39,7 +39,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from stc import SparseTensorClassifier"
+    "from stc import SparseTensorClassifier\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -47,6 +48,7 @@
    "metadata": {},
    "source": [
     "## Read the dataset\n",
+    "\n",
     "The dataset consists of 101 animals from a zoo. There are 16 variables with various traits to describe the animals. The 7 Class Types are: Mammal, Bird, Reptile, Fish, Amphibian, Bug and Invertebrate. Let's read and shuffle the data."
    ]
   },
@@ -391,86 +393,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Convert to JSON \n",
+    "## Tabular Input Data\n",
     "\n",
-    "Convert to JSON for a more flexible data format and illustrate the explainability for multi-valued attributes. In this example, we are going to define 2 dimensions: `d1` containing the information on the number of legs and if the animal is aquatic, and `d2` containing all the other features (except the animal name). This is an example with 2 multi-valued attribues (`d1` and `d2`) to predict `class_type`."
+    "STC supports input data in the form of pandas ``DataFrame`` for tabular data, where each row represents an item, each column represents a ``key`` and each cell represents a ``value``. **Missing values**, such as `NaN`, are converted to strings (e.g., `nan`) and treated as any other categorical value. STC deals with **categorical data** only and all the ``values`` are internally converted to strings. Continuous features should be discretized first."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's instruct STC to predict `class_type` based on all the other attributes in the dataset, except `animal_name`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'d1': ['legs=2', 'aquatic=0'],\n",
-       " 'd2': ['hair=1',\n",
-       "  'feathers=0',\n",
-       "  'eggs=0',\n",
-       "  'milk=1',\n",
-       "  'airborne=0',\n",
-       "  'predator=0',\n",
-       "  'toothed=1',\n",
-       "  'backbone=1',\n",
-       "  'breathes=1',\n",
-       "  'venomous=0',\n",
-       "  'fins=0',\n",
-       "  'tail=1',\n",
-       "  'domestic=0',\n",
-       "  'catsize=0'],\n",
-       " 'class_type': ['Mammal'],\n",
-       " 'animal_name': ['squirrel']}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "items = []\n",
-    "for i, (_, row) in enumerate(zoo.iterrows()):\n",
-    "    item = {}\n",
-    "    item['d1'] = [f+\"=\"+str(row[f]) for f in ['legs','aquatic']]\n",
-    "    item['d2'] = [f+\"=\"+str(row[f]) for f in zoo.columns[1:] if f not in ['legs','aquatic','class_type']]\n",
-    "    item['class_type'] = [row['class_type']]\n",
-    "    item['animal_name'] = [row['animal_name']]\n",
-    "    items.append(item)\n",
-    "\n",
-    "items[0]"
+    "STC = SparseTensorClassifier(targets=['class_type'], features=zoo.columns[1:-1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize Sparse Tensor Classifier\n",
-    "\n",
-    "Let's instruct STC to predict `class_type` based on `d1` and `d2`. In this example, we are going to keep the 2 multi-valued attributes in separate dimensions of the Sparse Tensor. This is obtained by setting `collapse=False` upon initialization."
+    "Fit the tabular data "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[============================================================] 100.0% Fitting (00:00:00.04/00:00:00.04)\r"
+     ]
+    }
+   ],
    "source": [
-    "STC = SparseTensorClassifier(targets=['class_type'], features=['d1', 'd2'], collapse=False)"
+    "STC.fit(zoo[0:70])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Global Explaination"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fit the training data"
+    "Predict the tabular data"
    ]
   },
   {
@@ -482,38 +454,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[============================================================] 100.0% Fitting (00:00:00.06/00:00:00.06)\r"
+      "[============================================================] 100.0% Predicting (00:00:00.04/00:00:00.04)\r"
      ]
     }
    ],
    "source": [
-    "STC.fit(items[0:70])"
+    "labels, probability, explainability = STC.predict(zoo[70:])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now understand the global model structure. This is achieved by the function `explain()`. The function returns a table with the scores associated to each feature (note: each feature is now represented in a 2 dimensional space), with respect to each target class label."
+    "Evaluate the predictions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.967741935483871"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "e = STC.explain()"
+    "accuracy_score(zoo['class_type'][70:], labels)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For example, which are the most relevant features to predict `Mammal`? \n",
-    "1. It is not `aquatic` and gives `milk`\n",
-    "2. It has 4 `legs` and does not lay `eggs`\n",
-    "3. It has 4 `legs` and has `hair`"
+    "## JSON Input Data\n",
+    "\n",
+    "STC also supports JSON input data in the form of list of dictionaries structured as follows:\n",
+    "\n",
+    "```python\n",
+    "data = [\n",
+    "    {'key1': [value1, value2, ..., valueN], 'key2': [], ..., 'keyN': []},\n",
+    "    ...\n",
+    "    {'key1': [value1, value2, ..., valueN], 'key2': [], ..., 'keyN': []},\n",
+    "]\n",
+    "```\n",
+    "\n",
+    "Such that each dictionary represents an item where each ``key`` is a feature associated to one or more ``values``.\n",
+    "This makes easy to deal with multi-valued attributes. You can consider encoding the **missing values** with a string representing the absence of information (e.g., `\"\"`), instead of providing an empty list `[]` for the `key`. STC deals with **categorical data** only and all the ``values`` are internally converted to strings. Continuous features should be discretized first."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's convert the `zoo` dataset into JSON. A possible representation of the animal is as follows. **Note**: This serves as a simple example on how STC deals with JSON datasets. It is generally not recommended to transform tabular data into JSON data. "
    ]
   },
   {
@@ -523,65 +523,11 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>d1</th>\n",
-       "      <th>d2</th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>class_type</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Mammal</th>\n",
-       "      <td>aquatic=0</td>\n",
-       "      <td>milk=1</td>\n",
-       "      <td>0.183166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mammal</th>\n",
-       "      <td>legs=4</td>\n",
-       "      <td>eggs=0</td>\n",
-       "      <td>0.170941</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mammal</th>\n",
-       "      <td>legs=4</td>\n",
-       "      <td>milk=1</td>\n",
-       "      <td>0.170941</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                   d1      d2     score\n",
-       "class_type                             \n",
-       "Mammal      aquatic=0  milk=1  0.183166\n",
-       "Mammal         legs=4  eggs=0  0.170941\n",
-       "Mammal         legs=4  milk=1  0.170941"
+       "{'legs': [2],\n",
+       " 'attributes': ['hair', 'milk', 'toothed', 'backbone', 'breathes', 'tail'],\n",
+       " 'animal_name': ['squirrel'],\n",
+       " 'class_type': ['Mammal']}"
       ]
      },
      "execution_count": 8,
@@ -590,46 +536,39 @@
     }
    ],
    "source": [
-    "e.loc[\"Mammal\"][0:3]"
+    "items = []\n",
+    "for i, (_, row) in enumerate(zoo.iterrows()):\n",
+    "    item = {}\n",
+    "    item['legs'] = [row['legs']]\n",
+    "    item['attributes'] = [f for f in zoo.columns[1:] if f not in ['legs','class_type'] and row[f]!=0]\n",
+    "    item['animal_name'] = [row['animal_name']]\n",
+    "    item['class_type'] = [row['class_type']]\n",
+    "    items.append(item)\n",
+    "\n",
+    "items[0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Local Explaination"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's now turn our attention to local explainability and explain the predictions for each predicted animal. The function `predict` returns a tuple of labels, probabilities, and explainability scores. Make sure to define some policy to avoid degenerate probability estimates."
+    "Let's instruct STC to predict `class_type` based on `legs` and `attributes`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[============================================================] 100.0% Predicting (00:00:00.03/00:00:00.03)\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test = items[70:]\n",
-    "labels, probability, explainability = STC.predict(test, policy=[['d1','d2'], ['d2'], []])"
+    "STC = SparseTensorClassifier(targets=['class_type'], features=['legs', 'attributes'])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's consider item 24: a [sole (fish)](https://en.wikipedia.org/wiki/Sole_(fish))"
+    "Fit the JSON data"
    ]
   },
   {
@@ -641,19 +580,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['sole'] ['Fish']\n"
+      "[============================================================] 100.0% Fitting (00:00:00.02/00:00:00.02)\r"
      ]
     }
    ],
    "source": [
-    "print(test[24]['animal_name'], test[24]['class_type'])"
+    "STC.fit(items[0:70])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which is the predicted class? $\\rightarrow$ `Fish`"
+    "Predict the JSON data"
    ]
   },
   {
@@ -662,26 +601,22 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "class_type    Fish\n",
-       "Name: 24, dtype: object"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[============================================================] 100.0% Predicting (00:00:00.02/00:00:00.02)\r"
+     ]
     }
    ],
    "source": [
-    "labels.loc[24]"
+    "labels, probability, explain = STC.predict(items[70:])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which is the probability of the predicted class? $\\rightarrow$ The probability of `Fish` is `0.67`, pretty high with respect to the other classes."
+    "Evaluate the predictions"
    ]
   },
   {
@@ -692,15 +627,7 @@
     {
      "data": {
       "text/plain": [
-       "class_type\n",
-       "Amphibian       0.043673\n",
-       "Bird            0.007436\n",
-       "Bug             0.000000\n",
-       "Fish            0.671736\n",
-       "Invertebrate    0.101347\n",
-       "Mammal          0.018671\n",
-       "Reptile         0.157138\n",
-       "Name: 24, dtype: float64"
+       "0.9354838709677419"
       ]
      },
      "execution_count": 12,
@@ -709,97 +636,7 @@
     }
    ],
    "source": [
-    "probability.loc[24]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Why is the model predicting `Fish`? Let's take the top 3 features: \n",
-    "1. The animal is `aquatic` and has `fins`\n",
-    "2. The animal has no `legs` and has `fins`\n",
-    "3. The animal has no `legs` and is not `venomous`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>d1</th>\n",
-       "      <th>d2</th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>item</th>\n",
-       "      <th>class_type</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">24</th>\n",
-       "      <th>Fish</th>\n",
-       "      <td>aquatic=1</td>\n",
-       "      <td>fins=1</td>\n",
-       "      <td>0.031694</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fish</th>\n",
-       "      <td>legs=0</td>\n",
-       "      <td>fins=1</td>\n",
-       "      <td>0.031694</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fish</th>\n",
-       "      <td>legs=0</td>\n",
-       "      <td>venomous=0</td>\n",
-       "      <td>0.023061</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        d1          d2     score\n",
-       "item class_type                                 \n",
-       "24   Fish        aquatic=1      fins=1  0.031694\n",
-       "     Fish           legs=0      fins=1  0.031694\n",
-       "     Fish           legs=0  venomous=0  0.023061"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "explainability.loc[(24,'Fish')][0:3]"
+    "accuracy_score(zoo['class_type'][70:], labels)"
    ]
   },
   {
@@ -808,11 +645,16 @@
    "source": [
     "# Congratulations! \n",
     "\n",
-    "Congratulations on completing this tutorial notebook! If you enjoyed working through the tutorial, and want to continue working with Sparse Tensor Classifier, we encourage you to finish the rest of the tutorials in [this series](https://github.com/SparseTensorClassifier/tutorial). Don't forget to star the [repository](https://github.com/SparseTensorClassifier/stc)! \n",
+    "Congratulations on completing this tutorial notebook! If you enjoyed working through the tutorial, and want to continue working with Sparse Tensor Classifier, we encourage you to finish the rest of the tutorials in [this series](https://github.com/SparseTensorClassifier/tutorial). Don't forget to [star the repository](https://github.com/SparseTensorClassifier/stc)! \n",
     "\n",
-    "[![GitHub Repo stars](https://img.shields.io/github/stars/SparseTensorClassifier/stc?style=social)](https://github.com/SparseTensorClassifier/stc)\n",
+    "![GitHub Repo stars](https://img.shields.io/github/stars/SparseTensorClassifier/stc?style=social)\n",
     "\n",
-    "Thanks by https://sparsetensorclassifier.org"
+    "<div>\n",
+    "    Thanks by <a href=\"https://sparsetensorclassifier.org\">https://sparsetensorclassifier.org</a>  \n",
+    "    <span style=\"float:right\">\n",
+    "        Questions? Open an <a href=\"https://github.com/SparseTensorClassifier/tutorial/issues\">issue</a>\n",
+    "    </span> \n",
+    "</div>"
    ]
   }
  ],
