--- a/Text_Classification_20Newsgroups.ipynb
+++ b/Text_Classification_20Newsgroups.ipynb
@@ -11,9 +11,9 @@
     "\n",
     "## Colab\n",
     "\n",
-    "This tutorial and the rest in [this sequence](https://github.com/SparseTensorClassifier/tutorial) can be done in Google colab. If you'd like to open this notebook in colab, you can use the following link or click [here](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Text_Classification_20Newsgroups.ipynb).\n",
+    "This tutorial and the rest in [this sequence](https://github.com/SparseTensorClassifier/tutorial) can be done in Google colab. If you'd like to open this notebook in colab, click [here](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Text_Classification_20Newsgroups.ipynb).\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Text_Classification_20Newsgroups.ipynb)\n",
+    "![](https://colab.research.google.com/assets/colab-badge.svg)\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -450,12 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "STC achieves state-of-the-art performance on 20Newsgroups, comparable to other deep learning approaches proposed in literature for text classification:\n",
-    "\n",
-    "- TextEnt: https://www.aclweb.org/anthology/C18-1016.pdf\n",
-    "- Neural Attentive Bag-of-Entities Model: https://www.aclweb.org/anthology/K19-1052.pdf\n",
-    "- Cooperative Neural Networks: https://papers.nips.cc/paper/2018/file/051928341be67dcba03f0e04104d9047-Paper.pdf\n",
-    "- Diversified Ensemble Neural Network: https://papers.nips.cc/paper/2020/file/b86e8d03fe992d1b0e19656875ee557c-Paper.pdf"
+    "Wow! STC is impressive. It achieves state-of-the-art performance on 20Newsgroups out-of-the-box, and it is comparable with recent deep learning approaches proposed in literature that are heavily tuned on this dataset. See e.g., [TextEnt](https://www.aclweb.org/anthology/C18-1016.pdf), [Neural Attentive Bag-of-Entities Model](https://www.aclweb.org/anthology/K19-1052.pdf), [Cooperative Neural Networks](https://papers.nips.cc/paper/2018/file/051928341be67dcba03f0e04104d9047-Paper.pdf), [Diversified Ensemble Neural Network](https://papers.nips.cc/paper/2020/file/b86e8d03fe992d1b0e19656875ee557c-Paper.pdf)."
    ]
   },
   {
@@ -464,11 +459,16 @@
    "source": [
     "# Congratulations! \n",
     "\n",
-    "Congratulations on completing this tutorial notebook! If you enjoyed working through the tutorial, and want to continue working with Sparse Tensor Classifier, we encourage you to finish the rest of the tutorials in [this series](https://github.com/SparseTensorClassifier/tutorial). Don't forget to star the [repository](https://github.com/SparseTensorClassifier/stc)! \n",
+    "Congratulations on completing this tutorial notebook! If you enjoyed working through the tutorial, and want to continue working with Sparse Tensor Classifier, we encourage you to finish the rest of the tutorials in [this series](https://github.com/SparseTensorClassifier/tutorial). Don't forget to [star the repository](https://github.com/SparseTensorClassifier/stc)! \n",
     "\n",
-    "[![GitHub Repo stars](https://img.shields.io/github/stars/SparseTensorClassifier/stc?style=social)](https://github.com/SparseTensorClassifier/stc)\n",
+    "![GitHub Repo stars](https://img.shields.io/github/stars/SparseTensorClassifier/stc?style=social)\n",
     "\n",
-    "Thanks by https://sparsetensorclassifier.org"
+    "<div>\n",
+    "    Thanks by <a href=\"https://sparsetensorclassifier.org\">https://sparsetensorclassifier.org</a>  \n",
+    "    <span style=\"float:right\">\n",
+    "        Questions? Open an <a href=\"https://github.com/SparseTensorClassifier/tutorial/issues\">issue</a>\n",
+    "    </span> \n",
+    "</div>"
    ]
   }
  ],
