--- a/Quickstart_Hyperparameters.ipynb
+++ b/Quickstart_Hyperparameters.ipynb
@@ -7,14 +7,14 @@
     "hidePrompt": false
    },
    "source": [
-    "# Run Sparse Tensor Classifier in-Database\n",
+    "# The Sparse Tensor Classifier Hyperparameters\n",
     "\n",
-    "In this tutorial you'll learn how to connect STC with DBMS so that computations are run directly on databases via SQL queries. Take full advantage of persistent storage and scalability!\n",
+    "In this tutorial you'll learn how to configure the `SparseTensorClassifier` hyperparameters.\n",
     "\n",
     "\n",
-    "## Colab\n",
+    "## Colab \n",
     "\n",
-    "This tutorial and the rest in [this sequence](https://github.com/SparseTensorClassifier/tutorial) can be done in Google colab. If you'd like to open this notebook in colab, click [here](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Quickstart_DBMS.ipynb).\n",
+    "This tutorial and the rest in [this sequence](https://github.com/SparseTensorClassifier/tutorial) can be done in Google colab. If you'd like to open this notebook in colab, click [here](https://colab.research.google.com/github/SparseTensorClassifier/tutorial/blob/main/Quickstart_Hyperparameters.ipynb).\n",
     "\n",
     "![](https://colab.research.google.com/assets/colab-badge.svg)\n",
     "\n",
@@ -38,9 +38,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from stc import SparseTensorClassifier\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "np.random.seed(0)"
    ]
   },
   {
@@ -393,50 +396,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize Sparse Tensor Classifier\n",
-    "By default `SparseTensorClassifier` is initialized with an in-memory SQLite connection. This can be modified by passing an `engine` string or connection upon initialization. Supported DBMS include:\n",
+    "## Add Noise\n",
     "\n",
-    "### SQLite v3.24+\n",
-    "\n",
-    "* use `sqlite:///path/to/file.db` \n",
-    "* see also [SQLite engine](https://docs.sqlalchemy.org/en/14/dialects/sqlite.html)\n",
-    "\n",
-    "### PostgreSQL 9.6+;\n",
-    "\n",
-    "* use `postgresql://user:pwd@host:port/dbname` \n",
-    "* or `postgresql+pg8000://user:pwd@host:port/dbname`\n",
-    "* see also [PostgreSQL engine](https://docs.sqlalchemy.org/en/14/dialects/postgresql.html)\n",
-    "\n",
-    "### MySQL v8.0+\n",
-    "\n",
-    "* use `mysql://user:pwd@host:port/dbname`\n",
-    "* see also [MySQL engine](https://docs.sqlalchemy.org/en/14/dialects/mysql.html)\n",
-    "\n",
-    "### SQL Server 2017+\n",
-    "\n",
-    "* use `mssql+pyodbc://user:pwd@host:port/dbname?driver=SQL+Server`\n",
-    "* see also [SQL Server engine](https://docs.sqlalchemy.org/en/14/dialects/mssql.html)\n",
-    "\n",
-    "### Oracle 12.2+\n",
-    "\n",
-    "* use `oracle+cx_oracle://user:pwd@host:port/dbname`\n",
-    "* seel also [Oracle engine](https://docs.sqlalchemy.org/en/14/dialects/oracle.html) and [cx_Oracle Installation](https://cx-oracle.readthedocs.io/en/latest/user_guide/installation.html)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's instruct STC to predict `class_type` based on all the other attributes in the dataset, except `animal_name`,  by using a SQLite database file as backend. All the data are saved to the DB and all the computations are run as SQL queries. It is also possible to use the same database for several case studies by specifying the argument `prefix`. Objects initialized with different `prefix` are completely independent as if they were accessing different databases."
+    "Let's convert the data to JSON and add noise to better understand the impact of the STC hyperparameters. Each animal is now represented with a set of categorical features such as `hair=1` (has hair), `eggs=0` (does not lay eggs), ..., as well 1000 random values to confound the classifier. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'features': ['hair=1', 'feathers=0', 'eggs=0', 'milk=1', 'airborne=0', 'aquatic=0', 'predator=0', 'toothed=1', 'backbone=1', 'breathes=1', 'venomous=0', 'fins=0', 'legs=2', 'tail=1', 'domestic=0', 'catsize=0', 5, 6, 5, 5, 5, 6, 5, 7, 8, 5, 6, 5, 5, 7, 3, 3, 2, 7, 6, 7, 8, 6, 5, 6, 3, 6, 3, 7, 5, 5, 4, 6, 5, 5, 2, 5, 5, 5, 7, 6, 4, 5, 6, 3, 6, 6, 4, 3, 4, 4, 5, 5, 8, 3, 4, 3, 6, 4, 5, 4, 3, 3, 6, 3, 4, 4, 6, 3, 7, 3, 8, 5, 8, 5, 6, 2, 4, 3, 4, 3, 4, 5, 3, 6, 5, 4, 5, 3, 5, 7, 4, 6, 3, 6, 4, 4, 5, 2, 7, 1, 6, 4, 6, 8, 4, 5, 5, 5, 4, 8, 5, 7, 6, 4, 6, 5, 7, 5, 7, 6, 6, 5, 8, 6, 5, 5, 2, 4, 6, 4, 5, 5, 3, 4, 5, 5, 5, 6, 6, 5, 7, 4, 5, 7, 6, 6, 3, 7, 6, 9, 3, 7, 3, 5, 3, 7, 6, 5, 5, 3, 6, 5, 6, 7, 8, 7, 2, 4, 6, 3, 5, 2, 4, 2, 6, 4, 4, 7, 6, 2, 3, 5, 5, 4, 7, 5, 5, 5, 6, 4, 5, 4, 4, 7, 6, 5, 4, 4, 3, 5, 4, 6, 5, 4, 2, 3, 6, 5, 5, 7, 9, 4, 6, 4, 2, 6, 4, 5, 5, 7, 6, 7, 4, 6, 4, 8, 6, 4, 8, 6, 4, 4, 5, 2, 4, 5, 4, 5, 4, 5, 7, 3, 5, 3, 6, 5, 5, 4, 3, 5, 4, 7, 6, 6, 7, 3, 5, 5, 8, 4, 4, 3, 2, 7, 6, 6, 4, 5, 3, 5, 8, 7, 4, 8, 4, 8, 7, 6, 6, 7, 4, 7, 5, 2, 4, 3, 8, 5, 5, 6, 4, 3, 6, 4, 5, 4, 3, 7, 8, 8, 7, 6, 4, 3, 5, 4, 3, 2, 6, 2, 6, 3, 3, 3, 6, 4, 5, 5, 7, 6, 4, 3, 3, 4, 4, 5, 6, 6, 4, 5, 4, 6, 3, 6, 6, 6, 4, 4, 5, 4, 4, 4, 5, 2, 6, 3, 5, 4, 5, 8, 6, 2, 5, 5, 5, 6, 4, 3, 5, 8, 4, 7, 5, 5, 7, 5, 6, 5, 7, 6, 6, 4, 6, 6, 4, 3, 6, 8, 5, 5, 7, 5, 8, 5, 6, 7, 6, 3, 6, 5, 3, 5, 4, 7, 2, 8, 4, 4, 2, 4, 5, 7, 3, 7, 7, 5, 4, 4, 5, 2, 2, 5, 3, 4, 4, 4, 3, 2, 3, 5, 8, 9, 5, 3, 6, 5, 9, 3, 6, 4, 4, 6, 4, 6, 5, 5, 5, 4, 6, 5, 4, 7, 7, 2, 4, 4, 6, 8, 8, 7, 4, 9, 4, 3, 8, 4, 6, 3, 6, 7, 4, 5, 4, 6, 4, 3, 5, 4, 7, 4, 5, 7, 6, 7, 7, 6, 6, 8, 9, 5, 3, 4, 3, 5, 3, 5, 5, 7, 8, 5, 4, 5, 7, 5, 5, 4, 5, 5, 4, 5, 4, 4, 5, 6, 4, 7, 7, 2, 4, 5, 3, 4, 6, 6, 5, 6, 4, 4, 6, 7, 5, 4, 2, 6, 1, 4, 5, 7, 3, 5, 2, 4, 5, 4, 4, 3, 5, 6, 6, 8, 1, 6, 5, 5, 8, 2, 6, 6, 5, 4, 6, 3, 5, 5, 6, 3, 4, 5, 6, 7, 5, 3, 8, 7, 5, 7, 5, 7, 7, 8, 7, 2, 4, 5, 8, 4, 3, 7, 5, 7, 3, 6, 5, 3, 6, 4, 2, 3, 3, 7, 6, 7, 6, 5, 4, 9, 4, 5, 5, 8, 4, 4, 6, 3, 5, 5, 4, 4, 5, 4, 5, 4, 8, 3, 3, 4, 5, 6, 5, 10, 4, 6, 6, 6, 8, 7, 6, 6, 4, 3, 3, 4, 5, 5, 6, 8, 3, 3, 5, 6, 7, 7, 8, 5, 5, 3, 6, 6, 7, 3, 5, 5, 4, 3, 7, 3, 5, 3, 5, 8, 5, 7, 3, 4, 5, 5, 6, 4, 6, 6, 5, 5, 5, 3, 6, 6, 6, 5, 3, 5, 5, 4, 2, 6, 3, 5, 6, 6, 8, 3, 7, 2, 5, 5, 5, 4, 4, 2, 5, 7, 4, 4, 3, 3, 4, 3, 4, 3, 3, 7, 3, 5, 6, 5, 3, 4, 5, 5, 4, 6, 6, 7, 2, 7, 5, 7, 6, 8, 6, 4, 5, 4, 4, 4, 5, 6, 4, 5, 3, 3, 2, 8, 1, 4, 5, 3, 7, 6, 8, 5, 4, 5, 7, 5, 4, 7, 4, 1, 4, 4, 7, 5, 5, 4, 7, 7, 9, 4, 8, 6, 6, 4, 4, 3, 7, 4, 5, 5, 6, 7, 3, 5, 7, 6, 3, 3, 4, 3, 5, 3, 5, 4, 5, 3, 8, 7, 5, 4, 4, 5, 2, 6, 5, 5, 6, 6, 8, 4, 7, 6, 4, 5, 4, 7, 3, 4, 4, 5, 6, 5, 5, 0, 5, 3, 4, 7, 4, 7, 6, 3, 5, 3, 6, 6, 6, 5, 7, 2, 4, 6, 5, 4, 3, 6, 5, 7, 6, 5, 4, 5, 7, 6, 1, 6, 7, 6, 4, 5, 3, 4, 7, 7, 4, 4, 5, 8, 3, 4, 7, 5, 7, 4, 5, 4, 4, 5, 5, 4, 7, 6, 6, 4, 5, 6, 6, 4, 6, 6, 3, 7, 5, 5, 5, 5, 5, 5, 7, 6, 5, 5, 6, 4, 4, 3, 7, 7, 3, 4, 4, 3, 7, 3, 8, 3, 7, 5, 4, 4, 6, 4, 6, 5, 5, 7, 5, 6, 6, 2, 6, 4, 7, 2, 4, 3, 5, 6, 4, 3, 4, 6, 3, 4, 3, 6, 5, 4, 6, 4, 6, 6, 4, 8, 3, 4, 4, 4, 5, 5, 7, 7, 4, 5, 3, 5, 4, 4, 5, 6, 3, 7, 6, 4, 7, 5, 10, 4, 5, 4, 4, 5, 7, 6, 6, 5, 7, 5, 7, 7, 4, 6, 2, 4, 4, 5, 6, 3, 5, 7, 4, 6], 'class_type': ['Mammal']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = []\n",
+    "for i, (_, row) in enumerate(zoo.iterrows()):\n",
+    "    item = {}\n",
+    "    item['features'] = [f\"{f}={str(row[f])}\" for f in zoo.columns[1:] if f not in ['class_type']] \n",
+    "    item['features'] += list(np.random.binomial(10, 0.5, 1000))\n",
+    "    item['class_type'] = [row['class_type']]\n",
+    "    items.append(item)\n",
+    "\n",
+    "print(items[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialize Sparse Tensor Classifier\n",
+    "\n",
+    "Let's instruct STC to predict `class_type` based on the animal's `features`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "STC = SparseTensorClassifier(engine='sqlite:///zoo.db', prefix=\"v1\", targets=['class_type'], features=zoo.columns[1:-1])"
+    "STC = SparseTensorClassifier(targets=['class_type'], features=['features'])"
    ]
   },
   {
@@ -448,30 +453,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[============================================================] 100.0% Fitting (00:00:00.13/00:00:00.13)\r"
-     ]
-    }
-   ],
-   "source": [
-    "STC.fit(zoo[0:70])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Predict the test data"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -479,22 +460,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[============================================================] 100.0% Predicting (00:00:00.16/00:00:00.16)\r"
+      "[============================================================] 100.0% Fitting (00:00:00.04/00:00:00.04)\r"
      ]
     }
    ],
    "source": [
-    "labels, probability, explainability = STC.predict(zoo[70:])"
+    "STC.fit(items[0:70])"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
+   "metadata": {},
    "source": [
-    "## Evaluation"
+    "## Predict the test data\n",
+    "\n",
+    "Sparse Tensor Classifier can be tuned with the following hyperparameters:\n",
+    "- `balance` $b\\geq0$: STC deals with imbalanced data by artificially balancing the sample when setting $b=1$. For $0<b<1$ the sample is semi-balanced, increasing the weight of the less frequent classes but not enough to have a balanced sample. For $b>1$ the sample is super-balanced, where the weight of the less frequent classes is greater than the weight of the most frequent classes.\n",
+    "- `entropy` $h\\geq0$: The entropic weights are set with $h=1$, dropped with $h=0$, and their intensity can be tuned more in general with $h\\geq 0$. Higher values of the entropy $h$ lead to predictions based on less but more relevant features, thus more robust to noise.\n",
+    "- `power` $p>0$: The power $p$ controls the probability amplitude. Smaller values of $p$ give similar weight to all the features regardless of their distribution. \n",
+    "\n",
+    "The hyperparameters can be set on-the-fly at prediction time, as the fitting is independent from these hyperparameters. Below some special cases are illustrated, but a standard cross-validation strategy to learn the optimal hyperparameters is also possible.\n",
+    "\n",
+    "**The particular choice**\n",
+    "```py \n",
+    "{\"entropy\": 0, \"balance\": 0, \"power\": 1}\n",
+    "```\n",
+    "corresponds to using classical probability and classifying with Bayes' rule."
    ]
   },
   {
@@ -503,9 +494,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[============================================================] 100.0% Predicting (00:00:00.03/00:00:00.03)\r"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.967741935483871"
+       "0.25806451612903225"
       ]
      },
      "execution_count": 7,
@@ -514,6 +512,8 @@
     }
    ],
    "source": [
+    "STC.set({\"entropy\": 0, \"balance\": 0, \"power\": 1})\n",
+    "labels, probability, explain = STC.predict(items[70:])\n",
     "accuracy_score(zoo['class_type'][70:], labels)"
    ]
   },
@@ -521,108 +521,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Persistent storage\n",
-    "\n",
-    "The model and data live in the persistent storage identified by the engine and prefix. \n",
-    "This means they can be recovered any time. Let's show it by closing the connection, deleting the python object, and re-initializing STC from the connection."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Close the connection"
+    "**The particular choice**\n",
+    "```py \n",
+    "{\"entropy\": 1, \"balance\": 0, \"power\": 1}\n",
+    "```\n",
+    "corresponds to using a robust version of classical probability and classifying with Bayes' rule."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "STC.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Destroy the object"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del STC"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Restore `SparseTensorClassifier` from the connection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "STC = SparseTensorClassifier(engine='sqlite:///zoo.db', prefix=\"v1\", targets=['class_type'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can directly predict the test data, as the model has been restored and was already fitted. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[============================================================] 100.0% Predicting (00:00:00.11/00:00:00.11)\r"
+      "[============================================================] 100.0% Predicting (00:00:00.03/00:00:00.03)\r"
      ]
-    }
-   ],
-   "source": [
-    "labels, probability, explainability = STC.predict(zoo[70:])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Evaluate the predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "0.967741935483871"
+       "0.9032258064516129"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "STC.set({\"entropy\": 1, \"balance\": 0, \"power\": 1})\n",
+    "labels, probability, explain = STC.predict(items[70:])\n",
     "accuracy_score(zoo['class_type'][70:], labels)"
    ]
   },
@@ -630,41 +561,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also update the model with new data (online learning). This is achieved by calling the function `fit()` with the argument `if_exists=\"append\"`. "
+    "**The particular choice**\n",
+    "```py \n",
+    "{\"entropy\": 0, \"balance\": 1, \"power\": 0.5}\n",
+    "```\n",
+    "corresponds to using quantum probability and classifying with Born's key postulate of quantum mechanics."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[============================================================] 100.0% Fitting (00:00:00.06/00:00:00.06)\r"
+      "[============================================================] 100.0% Predicting (00:00:00.04/00:00:00.04)\r"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9354838709677419"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "STC.fit(zoo[70:], if_exists=\"append\")"
+    "STC.set({\"entropy\": 0, \"balance\": 1, \"power\": 0.5})\n",
+    "labels, probability, explain = STC.predict(items[70:])\n",
+    "accuracy_score(zoo['class_type'][70:], labels)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clean the DB\n",
-    "Drop tables, close the connection, and destroy the engine. The model and data are lost."
+    "**The particular choice**\n",
+    "```py \n",
+    "{\"entropy\": 1, \"balance\": 1, \"power\": 0.5}\n",
+    "```\n",
+    "corresponds to using a robust version of quantum probability and classifying with Born's key postulate of quantum mechanics (**default configuration**)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[============================================================] 100.0% Predicting (00:00:00.05/00:00:00.05)\r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.967741935483871"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "STC.clean(deep=True)"
+    "STC.set({\"entropy\": 1, \"balance\": 1, \"power\": 0.5})\n",
+    "labels, probability, explain = STC.predict(items[70:])\n",
+    "accuracy_score(zoo['class_type'][70:], labels)"
    ]
   },
   {
