--- a/Quickstart.ipynb
+++ b/Quickstart.ipynb
@@ -384,7 +384,7 @@
     }
    ],
    "source": [
-    "zoo = pd.read_csv('./data/zoo/zoo.csv')\n",
+    "zoo = pd.read_csv('https://raw.githubusercontent.com/SparseTensorClassifier/tutorial/main/data/zoo/zoo.csv')\n",
     "zoo = zoo.sample(frac=1, random_state=42)\n",
     "zoo"
    ]
@@ -425,7 +425,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[============================================================] 100.0% Fitting (00:00:00.03/00:00:00.03)\r"
+      "[============================================================] 100.0% Fitting (00:00:00.04/00:00:00.04)\r"
      ]
     }
    ],
