--- a/Quickstart_Hyperparameters.ipynb
+++ b/Quickstart_Hyperparameters.ipynb
@@ -387,7 +387,7 @@
     }
    ],
    "source": [
-    "zoo = pd.read_csv('./data/zoo/zoo.csv')\n",
+    "zoo = pd.read_csv('https://raw.githubusercontent.com/SparseTensorClassifier/tutorial/main/data/zoo/zoo.csv')\n",
     "zoo = zoo.sample(frac=1, random_state=42)\n",
     "zoo"
    ]
