--- a/Text_Classification_20Newsgroups.ipynb
+++ b/Text_Classification_20Newsgroups.ipynb
@@ -53,6 +53,7 @@
     "from stc import SparseTensorClassifier\n",
     "\n",
     "np.random.seed(42)\n",
+    "nltk.download('punkt')\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
