--- a/Text_Classification_20Newsgroups.ipynb
+++ b/Text_Classification_20Newsgroups.ipynb
@@ -254,7 +254,7 @@
     }
    ],
    "source": [
-    "labels, _, _ = STC.predict(json_test, probability=False, explain=False)\n",
+    "labels, _, _ = STC.predict(json_test, explain=False)\n",
     "predictions['Sparse Tensor Classifier'] = labels.target.values.astype(int)"
    ]
   },
